pkg/cmd/kurel/testdata/networkpolicy-component/expected.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    launcher.gokure.dev/component: db-allow
  name: db-allow
  namespace: default
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    to:
    - ipBlock:
        cidr: 10.0.0.0/8
        except:
        - 10.1.0.0/16
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: api
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    launcher.gokure.dev/component: default-deny
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
